# LabRender

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  booststrap_dt.bat  bootstrap.bat  glfw.cmake
assets/pipelines/: deferred-fxaa.labfx  deferred-offscreen.json  deferred-offscreen.labfx  deferred.json  deferred.labfx  deferred_2_fxaa.json  deferred_fxaa.json  particles.labfx  shadertoy.json
assets/pipelines/deferred/: full-screen-deferred-blit-fsh.glsl  sky-fsh.glsl  sky-preetham-fsh.glsl  sky-vsh.glsl
assets/pipelines/deferred-fxaa/: full-screen-quad-vsh.glsl  fxaa-fsh-2.glsl  fxaa-fsh.glsl  illuminate-pass-fsh.glsl  sky-fsh.glsl  sky-vsh.glsl  tonemap-fsh.glsl
assets/pipelines/shadertoy/: 4lB3D1-fsh.glsl  XslGRr-fsh.glsl  ldX3DN-fsh.glsl  shadertoy-postamble-fsh.glsl
cmake/: FindLabRender.cmake  LabRenderConfig.cmake.in
cmake/defaults/: CXXDefaults.cmake  Packages.cmake
cmake/modules/: FindAssimp.cmake  FindLabCmd.cmake
examples/: CMakeLists.txt  LabRenderDemoApp.h
examples/CubeMapFilter/: CMakeLists.txt  CubeMapApp.cpp  LabRenderDemoApp.h  LabRenderExampleApp.cpp  README.md
examples/CubeMapFilter/cmft/: allocator.cpp  cmft_lib.cpp  config.h  cubemapfilter.cpp  cubemapfilter.h  cubemaputils.h  image.cpp  platform.h  print.cpp  stb_image.cpp
examples/Hydra/: CMakeLists.txt  Hydra.cpp
examples/ImGuiLab/: CMakeLists.txt  ImGui-README.md  ImGuiImplementation.cpp  ImGuiIntegration.cpp  ImGuiLab.h  ImGuiLabApp.cpp  LabRenderDemoApp.h  LabRenderExampleApp.cpp  glew.c  main.cpp  roboto_regular.ttf.h  robotomono_regular.ttf.h
examples/Immediate/: CMakeLists.txt  ImmediateDemoApp.cpp  ImmediateDemoApp.h  tinypng.h
examples/Immediate/InsectAI/Demo/: Demo.rc  Resource.h  demo.cpp  demo.h
examples/Immediate/InsectAI/include/InsectAI/: DynamicState.h  InsectAI.h  InsectAI3.h  InsectAI_Actuator.h  InsectAI_Agent.h  InsectAI_BoidSensors.h  InsectAI_Engine.h  InsectAI_Sensor.h  InsectAI_Sensors.h  OpenSteerLibrary.h  OpenSteerUtilities.h  OpenSteerVec3.h
examples/Immediate/InsectAI/src/: Actuator.cpp  Agent.cpp  BoidSensors.cpp  Engine.cpp  Function.cpp  InsectAI3.cpp  Light.cpp  Sensor.cpp
examples/LabRenderExample/: CMakeLists.txt  LabRenderDemoApp.h  LabRenderExampleApp.cpp  LabRenderExampleApp.mm  RenderMeshes.hpp
examples/LabRenderExamples/: CMakeLists.txt  LabRenderDemoApp.h  LabRenderExampleApp.cpp
examples/OffScreen/: CMakeLists.txt  OffScreenApp.cpp  OffScreenApp.h
examples/Particles/: CMakeLists.txt  Particles.cpp
examples/Primitives/: CMakeLists.txt  PrimitivesApp.cpp  PrimitivesApp.h
extras/: CMakeLists.txt
extras/LabImGui/: FontManager.h  LabImGui-gl-glfw.cpp  LabImGui-gl-glfw.h  materialIconDefinitions.h
extras/RenderGraph/include/LabRenderGraph/: LabRenderGraph.h
extras/RenderGraph/src/: RenderGraph.cpp  test.cpp
extras/attic/: FFI.cpp  FFI.h  LSystem.cpp  LSystem.h  LSystemModel.cpp  LSystemModel.h
extras/attic/oscpkt/: oscpkt.hh  udp.hh
extras/attic/webby/: webby.c
extras/imgui/: imgui_impl_opengl3.cpp
extras/imgui/LabImgui/: FontManager.h  Widgets.cpp  Widgets.h  fontmanager.cpp  meshula-icons.h
extras/include/LabCmd/: FFI.cpp  FFI.h  LabCmd.h
extras/include/LabCmd/oscpkt/: oscpkt.hh  oscpkt_test.cc
extras/include/LabCmd/webby/: demo.c
extras/include/LabRenderBinder/: LabRenderBinder.h
extras/include/LabRenderModelLoader/: modelLoader.h
extras/include/extras/: LabRenderBinder.h  modelLoader.h
extras/src/: LabRenderBinder.cpp  modelLoader.cpp
include/LabRender/: Camera.h  ConcurrentQueue.h  DepthTest.h  DrawList.h  ErrorPolicy.h  Export.h  FrameBuffer.h  Immediate.h  InOut.h  LabRender.h  Light.h  Material.h  MathTypes.h  Model.h  ModelBase.h  PassRenderer.h  PodVector.h  Renderer.h  RendererSpec.h  Semantic.h  SemanticType.h  Shader.h  ShaderBuilder.h  Texture.h  TextureLoader.h  TextureType.h  Transform.h  Uniform.h  UtilityModel.h  Utils.h  Vertex.h  ViewMatrices.h  gl4.h  linalg.h
include/LabRenderTypes/: DepthTest.h  SemanticType.h  Texture.h
src/: CMakeLists.txt  Camera.cpp  ErrorPolicy.cpp  FrameBuffer.cpp  Immediate.cpp  LabRender.cpp  Light.cpp  Material.cpp  MathTypes.cpp  Model.cpp  PassRenderer.cpp  RendererSpec.cpp  SemanticType.cpp  Shader.cpp  ShaderBuilder.cpp  Texture.cpp  TextureLoader.mm  Transform.cpp  Types.cpp  UtilityModel.cpp  Utils.cpp  Vertex.cpp  gl3w.c  gl4.h  glbind.h  odr.cpp  tiny.c
src/GL/: gl3w.h
src/tinyheaders/: tinyalloc.h  tinypng.h  tinyspritebatch.h
